<resources>
    <string name="app_name">ProjetoPrimeiroEstagio</string>

    <string name="login">LOGIN...</string>
    <string name="senha">SENHA...</string>
    <string name="entrar">ENTRAR</string>
    <string name="salvar">SALVAR</string>
    <string name="email">Email...</string>
    <string name="fone">Fone...</string>

    <string name="title_activity_tela02">Tela 02</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="nome_contato">Nome do Contato</string>
    <string name="email_contato">contato@email.com.br</string>
    <string name="perfil_contato">Perfil</string>
    <string name="menu_01">Menu 01</string>
    <string name="menu_02">Menu 02</string>
    <string name="menu_sair">Sair</string>
</resources>
