<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pontes.projetoprimeiroestagio.MainActivity">

    <!-- Substituir por uma image LOGO -->
    <TextView
        android:id="@+id/tvLogo"
        android:text="LOGO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginTop="95dp" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_below="@id/tvLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_elements2"
        android:inputType="text"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_below="@id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_elements"
        android:inputType="textPassword"
        android:hint="@string/senha"/>

    <Button
        android:id="@+id/btEntrar"
        android:layout_below="@id/etSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_elements2"
        android:text="@string/entrar"
        android:onClick="entrar"/>




</RelativeLayout>
